--- a/app/globals.css
+++ b/app/globals.css
@@ -66,3 +66,14 @@
     @apply bg-background text-foreground;
   }
 }
+
+body {
+  background-image: url("@/assets/bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+main,
+nav {
+  background: none !important;
+}
