--- a/app/globals.css
+++ b/app/globals.css
@@ -68,7 +68,7 @@
 }
 
 body {
-  background-image: url("@/assets/bg.png");
+  background-image: url("../assets/bg.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
