feat: 调整背景图片大小

--- a/app/globals.css
+++ b/app/globals.css
@@ -98,14 +98,14 @@ html.dark ::-webkit-scrollbar-track {
 }
 
 body {
-  background-image: url("../assets/bg.png");
+  background-image: url("../assets/bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
 .dark body {
-  background-image: url("../assets/bgDark.png");
+  background-image: url("../assets/bgDark.jpg");
 }
 
 main,
